# GraphKWS

./: .gitignore  Helbing_Mesaglio.py  Presentation.py  README.md  best_model_weights_cnn.h5  main copy.py  main.py  main_GPU.py  poetry_helper.txt  pyproject.toml  tuning_gnn_models.py  utils_data_copy.py  utils_spec_augmentation.py
hyperparameter_tuning/gnn_model_tuning/: oracle.json
hyperparameter_tuning/gnn_model_tuning/trial_00/: trial.json
logs/scalars/20250422-184807/train/: events.out.tfevents.1745340487.56fd06dc-512a-4661-a3f0-777253f19206.fritz.box.15237.0.v2
logs/scalars/20250422-184857/train/: events.out.tfevents.1745340537.56fd06dc-512a-4661-a3f0-777253f19206.fritz.box.15293.0.v2
models/: __init__.py  base_cnn.py  base_gnn copy.py  base_gnn.py
optuna_results/: gnn_study.db
saved_models/: best_model_weights_0.h5  best_model_weights_1.h5  best_model_weights_2.h5  best_model_weights_3.h5  best_model_weights_4.h5  best_model_weights_5.h5  best_model_weights_6.h5  best_model_weights_7.h5  best_model_weights_8.h5  best_model_weights_9.h5  cnn_res8narrow.h5  gatgcnv2_nospec.h5  gatgcnv2_nospec_reduced_2.h5  gatgcnv2_spec.h5  gcn_nospec_normalnodeenc.h5  gcn_nospec_normalnodeenc_reduced_2.h5  gcn_nospec_normalnodeenc_reduced_4.h5  gcn_spec_normalnodeenc.h5  gnn_weighted_nospec.h5  gnn_weighted_nospec_reduced_2.h5  gnn_weighted_nospec_reduced_4.h5  gnn_weighted_spec.h5
utils/: __init__.py  utils_data copy.py  utils_data.py  utils_graph.py  utils_metrics.py
