[project]
name = "kws-detection"
version = "0.1.0"
description = "KWS detection using a GNN"
authors = [
    {name = "Marlon Helbing",email = "marlonhelbing09@gmail.com"},
    {name = "Eleonora Mesaglio", email = "eleonoramesaglio@gmail.com"}
]
readme = "README.md"
requires-python = "3.9.6"
dependencies = [
    "tensorflow (>=2.19.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
