[project]
name = "kws-detection"
version = "0.1.0"
description = "KWS detection using a GNN"
authors = [
    {name = "Marlon Helbing",email = "marlonhelbing09@gmail.com"},
    {name = "Eleonora Mesaglio", email = "eleonoramesaglio@gmail.com"}
]
readme = "README.md"
requires-python = ">3.11.0,<3.13"
dependencies = [
    "tensorflow (>=2.19.0,<3.0.0)",
    "pathlib (>=1.0.1,<2.0.0)",
    "numpy (>=1.26.0,<2.2.0)",
    "tensorflow-io (>=0.37.1,<0.38.0)",
    "matplotlib (>=3.10.1,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
